# StockGo

./: .gitignore  Cargo.toml  README.md  pom.xml  server.ts  user_data.json
cgi/: search.ts
components/: ad_banner.ts  chart.ts  table.ts
downloads/: config.json
public/: index.html  style.css
src/: backtest.rs  config.rs  crawl.rs  lib_utils.rs  main.rs  manager.rs  parse.rs  selecter.rs  trust.rs
src/main/java/hianova/StockGo/: BackTest.java  Config.java  Crawl.java  Element.java  IPFSLayer.java  Lib.java  Manager.java  Parse.java  Selecter.java  StockGo.java
tools/: inject_routes.py
