[package]
name = "StockGo"
version = "0.1.0"
edition = "2021"

[dependencies]
cdDB = { path = "../cdDB" }
io_oi_core = { path = "../io_oi/core" }
io_oi_engine = { path = "../io_oi/engine" }
model_go = { path = "../modelgo" }


ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
scraper = "0.19"
regex = "1.10"
chrono = "0.4"
rand = "0.8"
aes = "0.8"
ecb = "0.1"
block-padding = "0.3"
encoding_rs = "0.8"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rkyv = { version = "0.8.0", features = ["alloc", "pointer_width_32"] }
